# PASCAL-S-compiler

./: .clang-format  .clang-tidy  .clang-uml  .gitmodules  CMakeLists.txt  README.md  init.sh  main.cpp  submodules.sh
docs/diagrams/: example_class_diagram.puml
include/: README.md  ast.h  parser.h  parser.tab.h  pstdlib.h  symbolTable.h  type.h
intetest/: 00_comment2.c  00_main.c  00_main.pas  01_multiple_returns.c  01_var_defn2.c  01_var_defn2.pas  02_branch.c  02_var_defn3.c  03_arr_defn2.c  03_param_name.c  04_const_var_defn2.c  04_func_name.c  05_arr_init_nd.c  06_func_defn.c  06_func_defn.pas  06_global_arr_init.c  07_BST.c  07_var_defn_func.c  08_add2.c  08_dp.c  09_addc.c  09_graph_coloring.c  0a_array  0a_array.c  0a_array.pas  0r_record  0r_record.c  0r_record.pas  0s_readln  0s_readln.c  0s_readln.pas  10_k_smallest.c  10_sub2.c  11_maximal_clique.c  11_subc.c  12_mul.c  12_prim.c  13_mulc.c  13_sort.c  14_div.c  (+84 more)
intetest/test/: intetest.cpp
scripts/: lex.l  lex.yy.c  lex.yy.cpp  lexonly.l  parser.tab.cpp  parser.y  parser2.y  y.output  y.tab.c  y.tab.h
src/: README.md  codegen.cpp  generation_visitor.cpp  pstdlib.cpp  semanticAnalysis.cpp  semantic_visitor.cpp  symbolTable.cpp  visitor.cpp  visitor_interface.cpp
unittest/: CMakeLists.txt  README.md
unittest/grammerals/: grammerals.cpp  grammerals_benchmark.cpp
